# feedback-loop

./: .cursorrules  .gitignore  .pattern-violations.json  .pre-commit-config.yaml  AGENT_KNOWLEDGE_BASE.md  AI_PATTERNS.md  CHANGELOG.md  CODEX_ENV_SETUP.md  CODE_REVIEW_2026-01-24.md  CONTRIBUTING.md  CURSOR_INTEGRATION.md  CURSOR_QUICK_REFERENCE.md  DARK_HORSE_MAP.md  DARK_HORSE_OVERVIEW.md  DARK_HORSE_QUICK_START.md  DARK_HORSE_SUMMARY.md  DESKTOP_LAUNCHERS.md  DOCUMENTATION_SUMMARY.md  FEEDBACK_LOOP_IMPROVEMENTS.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  METRICS_INTEGRATION.md  Makefile  OPTIMIZATION_REPORT.md  PHASE_2_COMPLETION.md  QUICKSTART.md  README.md  RESULTS.md  REVIEW_REPORT.md  ROADMAP.md  SECURITY.md  SUPERSET_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_ASSESSMENT.md  conftest.py  coverage.json  cursor-setup.sh  demo.py  demo_fastapi.py  demo_metrics.py  (+18 more)
Documentation/: GETTING_STARTED.md  INDEX.md  INTEGRATIONS.md  MEMORY_INTEGRATION.md  QUICK_REFERENCE.md
agent_reasoning_logs/: AGENTS_MD_INTEGRATION_SUMMARY.md  AGENT_REASONING_INSTRUCTIONS.md  DISCOVERABILITY_IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  README.md  TASK_COMPLETION_CHECKLIST.md  UPDATE_SUMMARY.md
alembic/: env.py
api/: README.md  __init__.py  dashboard.py  deps.py  insights.py  main.py  models.py
data/: .pattern-violations.json  demo-metrics.json  demo-patterns.json  sample_metrics_data.json
docs/: AI_PATTERNS_GUIDE.md  AUTOMATION_PLAN.md  CLOUD_SYNC.md  DARK_HORSE_ANALYSIS.md  DARK_HORSE_USERS_GUIDE.md  GETTING_STARTED.md  IDE_COMPANION_SUMMARY.md  INDEX.md  INTEGRATIONS.md  LLM_GUIDE.md  METRICS_GUIDE.md  PRODUCTION_CHECKLIST.md  QUICK_REFERENCE.md  REVIEW_DEBRIEF.md  SUPERSET_INTEGRATION.md  USER_SURVEY.md
documentation/: AI_PATTERNS_GUIDE.md  CLI_UX_IMPLEMENTATION_SUMMARY.md  DASHBOARD_TEST_RESULTS.md  EFFECTIVENESS_ALGORITHM.md  FASTAPI_GUIDE.md  FLEXIBLE_LEARNING_PATHS.md  GETTING_STARTED.md  IMPLEMENTATION_DETAILS.md  INDEX.md  INTEGRATIONS.md  LLM_GUIDE.md  LLM_ROBUSTNESS.md  MEMORY_INTEGRATION.md  METRICS_GUIDE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REVIEW_DEBRIEF.md  SUPERSET_INTEGRATION.md  TROUBLESHOOTING.md  USER_SURVEY.md  (+1 more)
hooks/: post-commit  (+2 more)
(+172 files in other folders)
